--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,6 @@ idna==2.7
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
-jwt==0.5.4
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
@@ -29,6 +28,7 @@ psycopg2==2.7.5
 py==1.5.4
 pycodestyle==2.4.0
 pycparser==2.18
+PyJWT==1.6.4
 pylint==2.1.1
 pytest==3.7.2
 requests==2.19.1
