--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ coveralls==1.4.0
 cryptography==2.3.1
 docopt==0.6.2
 Flask==1.0.2
+Flask-Cors==3.0.6
+Flask-Script==2.0.6
 gunicorn==19.9.0
 idna==2.7
 isort==4.3.4
