[#160621108] update tests with validation.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ branches:
   - ch-environment-and-structure-160237646
   only:
   - challenge2
+  - ft-order-history-160532780
+  - ft-menu-inventory-160543586
+  - bg-bugs-and-refactoring-160621108
 after_success:
  - coveralls
 notifications:
