--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ branches:
   - ch-environment-and-structure-160237646
   only:
   - challenge2
+  - ft-menu-inventory-160543586
 after_success:
  - coveralls
 notifications:
