--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==3.0.2
 asn1crypto==0.24.0
 astroid==2.0.4
 atomicwrites==1.1.5
@@ -13,6 +14,7 @@ cryptography==2.3.1
 docopt==0.6.2
 Flask==1.0.2
 Flask-Cors==3.0.6
+Flask-RESTful==0.3.6
 Flask-Script==2.0.6
 gunicorn==19.9.0
 idna==2.7
@@ -33,6 +35,7 @@ pycparser==2.18
 PyJWT==1.6.4
 pylint==2.1.1
 pytest==3.7.2
+pytz==2018.5
 requests==2.19.1
 six==1.11.0
 typed-ast==1.1.0
