--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ branches:
   - bg-bugs-and-refactoring-160621108
   - develop
   - ch-code-linting-160773903
+  - ft-v2-order-crud-160834260
 after_success:
  - coveralls
 notifications:
