Update default db env

--- a/.env_sample
+++ b/.env_sample
@@ -6,3 +6,4 @@ export PASSWORD=db_password
 export HOST=localhost
 export TEST_DATABASE=fast_food_fast_test
 export SU_PASS=setsuperpassword
+export DEFAULT_DB=postgres
