--- a/.env_sample
+++ b/.env_sample
@@ -1,9 +1,11 @@
 export FLASK_APP=run.py
+#export FLASK_ENV=development
 export FLASK_ENV=testing
-export SECRET=your_secret
-export USER=db_user
-export PASSWORD=db_password
+export SECRET=thisisnotasecret
+export USER=postgres
+export PASSWORD=your_password
 export HOST=localhost
+export DEV_DATABASE=fast_food_fast_dev
 export TEST_DATABASE=fast_food_fast_test
-export SU_PASS=setsuperpassword
+export SU_PASS=yourpass
 export DEFAULT_DB=postgres
